--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -13,7 +13,7 @@
         android:hint="First Name"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
-        app:layout_constraintBottom_toTopOf="@id/edit_text_secondname"
+        app:layout_constraintBottom_toTopOf="@id/edit_text_lastname"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,7 +21,7 @@
         app:layout_constraintVertical_chainStyle="packed" />
 
     <EditText
-        android:id="@+id/edit_text_secondname"
+        android:id="@+id/edit_text_lastname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Second Name"
@@ -44,7 +44,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@id/add_btn"
-        app:layout_constraintTop_toBottomOf="@id/edit_text_secondname" />
+        app:layout_constraintTop_toBottomOf="@id/edit_text_lastname" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/add_btn"
